# cc-pulseline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: coding-style.md  integration.md  patterns.md  performance.md  rendering.md  testing.md
.github/workflows/: release.yml
benches/: render_pipeline.rs
commands/: config.md  setup.md  status.md  uninstall.md
docs/: architecture.md  benchmarks.md  color-spec.md  metrics-reference.md  theme-palette.md
npm/main/: package.json
npm/scripts/: prepare-packages.js
screenshots/: agent-tracking.sh  context-alert.sh  core-lines.sh  cost-alert.sh  hero.sh  todo-tracking.sh  tool-tracking.sh
scripts/: install.sh
skills/pulseline-troubleshoot/: SKILL.md
src/: config.rs  lib.rs  main.rs  types.rs
src/providers/: env.rs  git.rs  mod.rs  quota.rs  quota_fetch.rs  stdin.rs  transcript.rs
src/render/: color.rs  fmt.rs  icons.rs  layout.rs  mod.rs
src/state/: cache.rs  mod.rs
tests/: activity_pipeline.rs  adaptive_performance.rs  cli_flags.rs  config_merge.rs  core_metrics.rs  git_file_stats.rs  output_speed.rs  quota_display.rs  segment_toggles.rs  session_cache.rs  smoke_cli.rs
tests/fixtures/: core_metrics_complete.json  core_metrics_missing.json  minimal_statusline_input.json  missing_statusline_input.json  transcript_agent_flow.jsonl  transcript_many_tools.jsonl  transcript_mixed_three_paths.jsonl  transcript_nested_agent_progress.jsonl  transcript_nested_multi_block.jsonl  (+12 more)
(+2 files in other folders)
