[package]
name = "cc-pulseline"
version = "0.1.0"
edition = "2021"
description = "High-performance Claude Code statusline with observability (bootstrap scaffolding only)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.16"
